<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.kmiokande.basicactivityteste.MainActivity">
    <item
        android:id="@+id/actionAdd"
        android:icon="@drawable/ic_add_white_24dp"
        android:orderInCategory="100"
        android:title="@string/addNote"
        app:showAsAction="always" />
    <item
        android:id="@+id/actionShare"
        android:icon="@drawable/ic_share_white_24dp"
        android:orderInCategory="100"
        android:title="@string/share"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/actionSobre"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never" />
    <item
        android:id="@+id/actionSair"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never" />
</menu>
